# Infra_Learning

./: .gitignore  README.md  pyproject.toml
MoE/examples/: run_moe_demo.py
MoE/src/moe_learning/: __init__.py  experts.py  layer.py  moe.py  outputs.py  router.py
MoE/tests/: test_moe.py
Speculative_Decoding/: pyproject.toml
Speculative_Decoding/examples/: run_demo.py  run_eagle_demo.py
Speculative_Decoding/src/speculative_decoding/: __init__.py  baseline.py  config.py  eagle.py  metrics.py  models.py  speculative.py
