[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-learning"
version = "0.1.0"
description = "Learning demos for LLM inference infrastructure."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = [
    "Speculative_Decoding/src",
    "MoE_Learning/src",
]

[tool.pytest.ini_options]
testpaths = [
    "MoE_Learning/tests",
]

