[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speculative-decoding"
version = "0.1.0"
description = "A small speculative decoding learning demo."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
